--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,6 +5,8 @@ $color-heading:hsl(271, 36%, 24%);
 $color-subHeading: hsl(276, 100%, 81%);
 $color-chatLeft:hsl(276, 55%, 52%);
 $color-chatRight:hsl(271, 15%, 43%);
+$color-paragraph:hsl(270, 7%, 64%);
+$color-bg-gray:#f9f4fa;
 $color-placeholder:hsl(206, 6%, 79%);
 $color-white:#fff;
 
